--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -72,7 +72,7 @@ header {
 
 .album-form {
   margin: 20px auto;
-  /* padding: ; */
+  /* padding: ;. */
   background: rgba(255, 255, 255, 0.9);
   border-radius: 10px;
   width: 300px;
