--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -66,7 +66,7 @@ header {
 
 /* Swiper */
 .swiper-button-next, .swiper-button-prev {
-  color: white;
+  color: blue;
 }
 
 .swiper-pagination-bullet {
@@ -159,7 +159,7 @@ header {
 }
 
 #ytplayer {
-  z-index: 10000;
+  /* z-index: 1000; */
 }
 
 .input-container {
